fix missing padding on last footer column

--- a/src/styles/components/mm/components/_footer.scss
+++ b/src/styles/components/mm/components/_footer.scss
@@ -121,6 +121,9 @@
                 &:first-child {
                     padding-left: 0;
                 }
+                &:last-child {
+                    padding: 1rem;
+                }
             }
         }
     }
